--- a/Alias Method.ipynb
+++ b/Alias Method.ipynb
@@ -81,13 +81,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1]\n",
+      "[ 1.   0.5  0.5]\n"
+     ]
+    }
+   ],
    "source": [
-    "J, q = alias_setup(probs)"
+    "J, q = alias_setup(probs)\n",
+    "print (J)\n",
+    "print (q)"
    ]
   },
   {
